# renault-api

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  New Text Document.txt  README.rst  bandit.yml  codecov.yml  constraints.txt  mypy.ini  noxfile.py  pyproject.toml  spr.py
.github/: dependabot.yml  release-drafter.yml  renovate.json
.github/workflows/: constraints.txt  develop.yml  release.yml  stale.yaml  tests.yml
docs/: conf.py  endpoints.rst  index.rst  reference.rst  requirements.txt  usage.rst
docs/endpoints/: vehicle_action.charge-mode.rst  vehicle_action.charge-schedule.rst  vehicle_action.charging-start.rst  vehicle_action.horn-lights.rst  vehicle_action.hvac-schedule.rst  vehicle_action.hvac-start.rst  vehicle_action.refresh-location.rst  vehicle_actions.charge-pause-resume.rst  vehicle_data.alerts.rst  vehicle_data.battery-status.rst  vehicle_data.charge-history.rst  vehicle_data.charge-mode.rst  vehicle_data.charge-schedule.rst  vehicle_data.charge-soclevels.rst  vehicle_data.charges.rst  vehicle_data.charging-settings.rst  vehicle_data.cockpit.rst  vehicle_data.hvac-history.rst  vehicle_data.hvac-sessions.rst  vehicle_data.hvac-settings.rst  vehicle_data.hvac-status.rst  vehicle_data.location.rst  vehicle_data.lock-status.rst  vehicle_data.notification-settings.rst  vehicle_data.pressure.rst  vehicle_data.res-state.rst  vehicle_data.soc-levels.rst  vehicle_kcm_actions.charge-pause-resume.rst  vehicle_kcm_data.ev-settings.rst  vehicle_kcm_data.soc-levels.rst
docs/reference/: gigya.rst  kamereon.rst  renault_api.rst
src/renault_api/: __init__.py  __main__.py  client.py  const.py  credential.py  credential_store.py  dataclass.py  exceptions.py  gigya.py  helpers.py  kamereon.py  models.py  pyze_override.py  renault_account.py  renault_client.py  renault_session.py  renault_vehicle.py  session_provider.py
src/renault_api/cli/: __main__.py  core.py  helpers.py  kamereon.py  renault_account.py  renault_client.py  renault_settings.py  renault_vehicle.py  renault_vehicle_ac.py  renault_vehicle_charge.py  settings.py  vehicle_status.py  vehicles.py
src/renault_api/cli/charge/: commands.py  control.py  history.py  schedule.py  soc_levels.py
src/renault_api/cli/hornlights/: commands.py  control.py
src/renault_api/cli/hvac/: __init__.py  commands.py  control.py  history.py
src/renault_api/gigya/: __init__.py  exceptions.py  models.py  schemas.py
src/renault_api/kamereon/: __init__.py  client.py  enums.py  exceptions.py  helpers.py  models.py  schemas.py
src/renault_api/model/: __init__.py  credential.py  gigya.py  kamereon.py  renault_client.py
tests/: __init__.py  conftest.py  const.py  fixtures.py  helpers.py  ruff.toml  test_api_keys.py  test_credential.py  test_credential_store.py  test_dataclass.py  test_gigya.py  test_kamereon.py  test_kamereon_action.py  test_kamereon_data.py  test_kamereon_init.py  test_main.py  test_renault_account.py  test_renault_client.py  test_renault_session.py  test_renault_vehicle.py  test_session_provider.py
tests/__snapshots__/: test_api_keys.ambr  test_renault_vehicle.ambr
tests/cli/: __init__.py  conftest.py  test_account.py  test_client.py  test_main.py  test_session.py  test_vehicle.py  test_vehicle_charge.py  test_vehicle_hornlights.py  test_vehicle_hvac.py
tests/cli/__snapshots__/: test_account.ambr  test_client.ambr  test_session.ambr  test_vehicle.ambr  test_vehicle_charge.ambr  test_vehicle_hornlights.ambr  test_vehicle_hvac.ambr
tests/fixtures/: __init__.py  config_sample.txt  gigya_responses.py  kamereon_responses.py
tests/fixtures/firebase/: fetch.fr.json
tests/fixtures/gigya/: account_info.json  account_info.txt  account_info_corrupted.txt  get_jwt.403013.json  get_jwt.json  get_jwt.txt  get_jwt_corrupted.txt  login.json  login.txt  login_failed.json  login_failed.txt
tests/fixtures/gigya/error/: get_jwt.403005.json  login.403042.json
tests/fixtures/kamereon/: Contributions.rst  account_vehicles.txt  expected_specs.json  person.json  persons_detail.txt  vehicle_cockpit.txt
tests/fixtures/kamereon/action/: charging-start(start).txt
tests/fixtures/kamereon/actions/: charge-mode.schedule_mode.txt  charge-schedule.schedules.txt
tests/fixtures/kamereon/contracts/: contracts_fr_FR_1.json
tests/fixtures/kamereon/error/: access_denied.json  bad_gateway.html  charge_mode_inprogress.json  failed_forward.json  forbidden.json  hvac-status-error.json  hvac-status.403.403011.json  privacy_on.json  resource_not_found.json
tests/fixtures/kamereon/errors/: invalid_upstream.json  not_supported.json  quota_limit.txt
tests/fixtures/kamereon/person/: notifications.1.json
tests/fixtures/kamereon/vehicle/: battery-status.1.txt  battery-status.2.json  charge-history.txt  charges.txt  cockpit.json  hvac-status.txt
tests/fixtures/kamereon/vehicle_action/: charge-pause-resume.resume.json  charge-schedule.activate.json  charge-schedule.deactivate.json  charge-schedule.empty.json  charge-schedule.scheduled.json  charge-schedule.schedules.json  charging-settings.always.json  horn-lights.horn.json  horn-lights.lights.json  hornlights-horn.json  hornlights-lights.json  (+3 more)
tests/gigya/: test_gigya.py  test_gigya_error.py  test_gigya_models.py  test_models_error.py
tests/kamereon/: __init__.py  test_kamereon.py  test_kamereon_charge_settings.py  test_kamereon_error.py  test_kamereon_person.py  test_kamereon_vehicle_action.py  test_kamereon_vehicle_contract.py  test_kamereon_vehicle_data.py  test_kamereon_vehicle_details.py  test_kamereon_vehicle_gateway.py  test_kamereon_vehicle_schedule.py  test_kamereon_vehicles.py  test_models_vehicle_action.py  test_models_vehicles.py
tests/kamereon/__snapshots__/: test_kamereon.ambr  test_kamereon_vehicle_data.ambr
tests/model/: test_credential.py  test_gigya.py  test_gigya_error.py  test_kamereon.py  test_kamereon_client.py  test_kamereon_error.py  test_kamereon_vehicle_action.py  test_kamereon_vehicle_data.py  test_kamereon_vehicles.py  test_renault_client.py
(+98 files in other folders)
