[tool.poetry]
name = "renault-api"
version = "0.5.2"
description = "Renault API"
authors = ["epenet"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/renault-api"
repository = "https://github.com/hacf-fr/renault-api"
documentation = "https://renault-api.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/renault-api/releases"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Warning: as of 2024-04-23, aiohttp is pinned to 3.9.5 on HA-core
aiohttp = ">=3.9.5"
# Warning: as of 2023-07-19, pyjwt is pinned to 2.8.0 on HA-core
PyJWT = ">=2.8.0"

marshmallow-dataclass = ">=8.2.0"
click = { version = ">=8.0.1", optional = true }
tabulate = { version = ">=0.8.7", optional = true }
dateparser = {version = ">=1.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.2"
coverage = {extras = ["toml"], version = "7.13.1"}
safety = "==3.7.0"
mypy = "1.19.1"
typeguard = "==4.4.4"
pre-commit = "==4.5.1"
ruff = "==0.14.11"
darglint = "1.8.1"
pre-commit-hooks = "==6.0.0"
Pygments = "2.19.2"
pytest-asyncio = "==1.3.0"
aioresponses = "0.7.8"
pytest-cov = "==7.0.0"
syrupy = "==5.0.0"

# docs (Python >= 3.14)
furo = {version = "==2025.12.19", python = ">=3.14"}
myst-parser = {version = "==5.0.0", python = ">=3.14"}
sphinx = {version = "==8.2.3", python = ">=3.14"}
sphinx-autobuild = {version = "==2025.8.25", python = ">=3.14"}
sphinx-click = {version = "==6.2.0", python = ">=3.14"}

[tool.poetry.extras]
cli = ["click", "tabulate", "dateparser"]

[tool.poetry.scripts]
renault-api = "renault_api.cli.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["renault_api"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "A001",    # Variable is shadowing a Python builtin
    "A002",    # Argument is shadowing a Python builtin
    "N815",    # Variable in class scope should not be mixedCase
    "PLR0911", # Too many return statements
    "PLR0913", # Too many arguments in function definition
]
select = [
    "A",     # flake8-builtins
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "E",     # pycodestyle error
    "ERA",   # eradicate
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
    "UP",    # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true
known-local-folder = [
    "renault_api",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
